# src/models/user/user.schema.ts
@@ -4,30 +4,15 @@ import { IUser } from "./user.model";
 
 const userSchema = new mongoose.Schema<IUser>(
   {
-    first_name: { type: "string", required: true },
-    last_name: { type: "string", required: true },
+    firstName: { type: "string", required: true },
+    lastName: { type: "string", required: true },
     email: { type: "string", required: true },
     phone: { type: "number", required: true },
-    active: { type: "boolean", default: false },
+    isActive: { type: "boolean", default: false },
     secretKey: { type: "string" },
     otpauthUrl: { type: "string" },
   },
   { timestamps: true }
 );
-
-// userSchema.pre("save", function (next) {
-//   var salt = bcrypt.genSaltSync(10);
-
-//   if (this.password && this.isModified("password")) {
-//     this.password = bcrypt.hashSync(this.password, salt);
-//   }
-//   next();
-// });
-
-// userSchema.methods.toJSON = function () {
-//   var obj = this.toObject();
-//   delete obj.password;
-//   return obj;
-// };
 
 export const User = mongoose.model<IUser>("User", userSchema);
